--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <div class="middle-container">
     <div class="profile">
       <img  style="height: 200px; margin-top: 30px;" src="1666776914477-modified.png" alt="author-img">
-      <h2>Hellos</h2>
+      <h2>Hello</h2>
       <p>I am Ishan Verma. I am a second year student. I have keen interest in development and designing ideas.</p>
     </div>
     
